--- a/books/d2f1440cfbba94/config.yaml
+++ b/books/d2f1440cfbba94/config.yaml
@@ -1,13 +1,12 @@
 title: "OPA/Rego入門"
 summary: "情報セキュリティの分野で注目されている汎用的なポリシーエンジンOPAと、OPAで利用するポリシー記述言語Regoについて解説します"
-topics: ["opa", "rego"]
-published: false
+topics: ["opa", "rego", "go", "入門"]
+published: true
 toc_depth: 0
 price: 0 # 有料の場合200〜5000
 
 chapters:
   - introduction
-  - chap-intro
   - intro-overview
   - intro-policy-as-code
   - chap-rego
